<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvPref1Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Vegan or NonVegan ?"
            android:textColor="@color/bnaColor"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textSize="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/rgVegNonVeg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="40dp"
                android:orientation="vertical">
                <RadioButton android:id="@+id/rbVeg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/veg"
                    android:textColor="@color/darkGrey"
                    android:buttonTint="@color/bnaColor"
                    android:drawableEnd="@drawable/ic_veg"
                    android:drawablePadding="10dp"
                    android:textSize="18dp"/>
                <RadioButton android:id="@+id/rbNonVeg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="start"
                    android:text="@string/nonveg"
                    android:textColor="@color/darkGrey"
                    android:buttonTint="@color/bnaColor"
                    android:drawableEnd="@drawable/ic_nonveg"
                    android:drawablePadding="10dp"
                    android:textSize="18dp"/>
                <RadioButton android:id="@+id/rbAnything"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="start"
                    android:text="@string/anything"
                    android:textColor="@color/darkGrey"
                    android:buttonTint="@color/bnaColor"
                    android:drawableEnd="@drawable/ic_anything"
                    android:drawablePadding="10dp"
                    android:textSize="18dp"/>
            </RadioGroup>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>