<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:clickable="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/foodViewModalTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/foodviewModalTitle"
                android:textSize="16dp"
                android:textColor="@color/bnaColor" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="20dp"
            android:background="@color/white"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/tvRestName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:layout_marginStart="20dp"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:background="@color/white">

            <EditText
                android:id="@+id/etDishSearch"
                android:layout_width="0dp"
                android:layout_weight="0.85"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_search"
                android:maxLines="1"
                android:hint="@string/search_dish"
                android:textSize="18sp"
                android:padding="15dp"
                android:drawablePadding="10dp"
                android:textColor="@color/darkGrey"
                android:inputType="textNoSuggestions"/>

            <ProgressBar
                android:id="@+id/dishSearchLoader"
                style="?android:attr/progressBarStyleLarge"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="0.15"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:indeterminate="true"
                android:indeterminateTintMode="src_atop"
                android:indeterminateTint="@color/bnaColor"
                android:visibility="gone"/>

            <ImageView
                android:id="@+id/dishCancelButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.15"
                android:src="@drawable/ic_cancel_grey"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@color/lightColor" />

        <ListView
            android:id="@+id/lvDishSearchResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:divider="@android:color/transparent"
            android:background="@color/white"
            android:dividerHeight="1dp"/>

        <LinearLayout
            android:id="@+id/rateAndReviewLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <RatingBar
                android:id="@+id/dishRatingBar"
                style="@style/DishRatingbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:numStars="5"
                android:stepSize="0.5"
                android:scaleX="1.2"
                android:scaleY="1.2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:background="@color/background">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etFoodView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:hint="@string/foodview_hint"
                        android:textSize="15sp"
                        android:padding="15dp"
                        android:background="@android:color/transparent"
                        android:lines="4"
                        android:maxLength="200"
                        android:gravity="top|left"/>

                    <TextView
                        android:id="@+id/tvTextCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/etFoodView"
                        android:layout_alignRight="@id/etFoodView"
                        android:text="0/200"
                        android:textSize="12sp"
                        android:textColor="@color/grey"
                        android:padding="5dp"/>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>