<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.bananaa.activity.UserActivity"
    android:descendantFocusability="blocksDescendants">

    <ProgressBar
        android:id="@+id/pbUserProfile"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/bnaColor"
        android:layout_gravity="center"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/svUserProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageButton
                                android:id="@+id/ivBack"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:layout_margin="5dp"
                                android:src="@drawable/ic_arrow_back"
                                android:backgroundTint="@android:color/transparent" />


                            <TextView
                                android:id="@+id/tvFoodbookTxt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:text="@string/foodbook"
                                android:textColor="@color/bnaColor"/>

                        </RelativeLayout>

                        <com.makeramen.roundedimageview.RoundedImageView
                            android:id="@+id/ivImage"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="10dp"
                            android:scaleType="fitCenter"
                            android:src="@color/lightColor"
                            app:riv_border_width="0dip"
                            app:riv_corner_radius="50dp"
                            app:riv_mutate_background="true"
                            app:riv_oval="true"
                            app:riv_tile_mode="repeat" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tvName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:padding="20dp"
                                android:textColor="@color/darkGrey"
                                android:textSize="@dimen/restaurant_title" />

                            <ImageButton
                                android:id="@+id/ivEdit"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_marginEnd="10dp"
                                android:src="@drawable/ic_edit"
                                android:layout_centerVertical="true"
                                android:backgroundTint="@android:color/transparent" />

                        </RelativeLayout>

                        <TextView
                            android:id="@+id/tvStatus"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp"
                            android:textSize="12dp"/>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="25dp"
                            android:layout_marginTop="10dp"
                            android:background="@color/lightColor" />

                        <TextView
                            android:id="@+id/tvLevel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:paddingTop="20dp"
                            android:textSize="18dp"
                            android:textColor="@color/bnaColor" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="20dp"
                            android:weightSum="1">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/tvRatingCount"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:text="3 Ratings"
                                    android:textSize="16dp"
                                    android:textColor="@color/bnaColor" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.5"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/tvFoodviewCount"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:text="4 Foodviews"
                                    android:textSize="16dp"
                                    android:textColor="@color/bnaColor" />

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>


                </FrameLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cvCuisinesAndDishesPrefs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/tvFavouriteCuisinesTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="Cuisines I love"
                        android:textColor="@color/bnaColor"/>

                    <TextView
                        android:id="@+id/tvFavouriteCuisines"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:paddingTop="5dp"
                        android:textSize="14dp"
                        android:text="North Indian, Mediterranean, Chinese, Biryani and 3 others "/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/lightColor" />

                    <TextView
                        android:id="@+id/tvFavouriteDishesTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:paddingTop="20dp"
                        android:text="Favourite dishes"
                        android:textColor="@color/bnaColor"/>

                    <TextView
                        android:id="@+id/tvFavouriteDishes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:paddingTop="5dp"
                        android:textSize="14dp"
                        android:text="Chicken, Mutton, Pasta, Noodles, Samosa and 6 others"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="25dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/lightColor" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/editPreferences"
                        android:layout_width="150dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="20dp"
                        android:backgroundTint="@color/lightGrey"
                        android:text="@string/editPreferences"
                        android:textColor="@color/black" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvRatingsAndFoodviewsTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="20dp"
                        android:text="@string/ratingsAndFoodviews"
                        android:textColor="@color/bnaColor"
                        android:textSize="@dimen/heading" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:background="@color/lightColor" />

                    <in.bananaa.utils.CustomListView
                        android:id="@+id/lvFoodviews"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clipChildren="false"
                        android:clipToPadding="false"
                        android:divider="@null"
                        android:dividerHeight="0dp"></in.bananaa.utils.CustomListView>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
